--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 31
 
     defaultConfig {
         applicationId "com.devlee.kosmo88_erp_android"
@@ -57,11 +57,11 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.2.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
-    //RxKotlin
-    implementation "io.reactivex.rxjava2:rxkotlin:2.4.0"
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
     // Gson 변환기 라이브러리
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
     // Scalars 변환기 라이브러리
     implementation 'com.squareup.retrofit2:converter-scalars:2.7.1'
+
+    implementation 'com.google.android.material:material:1.1.0-alpha06'
 }
