--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,30 +1,33 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 31
+    compileSdkVersion 28
 
     defaultConfig {
         applicationId "com.devlee.kosmo88_erp_android"
         minSdkVersion 21
         //noinspection ExpiredTargetSdkVersion
-        targetSdkVersion 26
+        targetSdkVersion 28
         versionCode 1
         versionName "1.0"
-
+        multiDexEnabled true
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
     }
 
     buildTypes {
-
         release {
-            minifyEnabled false
+            minifyEnabled true
+            multiDexEnabled true
+            shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
     }
+
     compileOptions {
         sourceCompatibility 1.8
         targetCompatibility 1.8
     }
+
     packagingOptions {
         exclude 'META-INF/DEPENDENCIES'
         exclude 'META-INF/NOTICE'
@@ -38,30 +41,30 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support:multidex:1.0.3'
 
     //noinspection GradleCompatible
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support.constraint:constraint-layout:1.0.2'
+    implementation "com.android.support:appcompat-v7:$supportlib_version"
+    implementation 'com.android.support.constraint:constraint-layout:2.0.4'
     implementation 'android.arch.lifecycle:livedata:1.1.1'
     implementation 'android.arch.lifecycle:viewmodel:1.1.1'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'com.android.support.test:runner:1.0.1'
-    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.1'
+    androidTestImplementation 'com.android.support.test:runner:1.0.2'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 
-    // Java Object를 JSON 형식으로 주고받기 위한 구글 라이브러리
-    implementation 'com.google.code.gson:gson:2.7.1'
     //noinspection GradleCompatible
-    implementation 'com.android.support:recyclerview-v7:26.1.0'
-    // Retrofit 라이브러리
+    implementation "com.android.support:recyclerview-v7:$supportlib_version"
+
+    // 통신용 라이브러리 + Retrofit 라이브러리
+    implementation 'com.google.code.gson:gson:2.7.1'
     implementation 'com.squareup.retrofit2:retrofit:2.7.1'
     implementation 'com.squareup.okhttp3:okhttp:4.2.2'
     implementation 'com.squareup.okhttp3:logging-interceptor:4.2.2'
     implementation 'com.squareup.retrofit2:adapter-rxjava2:2.7.1'
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-    // Gson 변환기 라이브러리
     implementation 'com.squareup.retrofit2:converter-gson:2.7.1'
-    // Scalars 변환기 라이브러리
     implementation 'com.squareup.retrofit2:converter-scalars:2.7.1'
 
-    implementation 'com.google.android.material:material:1.1.0-alpha06'
+    // 마테리얼 디자인
+    implementation 'com.google.android.material:material:1.1.0-alpha04'
 }
