--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,12 +14,14 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".MenuActivity"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
             android:exported="true" />
         <activity
             android:name=".HRViewActivity"
             android:exported="true" />
         <activity
             android:name=".LoginActivity"
+            android:theme="@style/Theme.MaterialComponents.Light.NoActionBar"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
